remove permsize reference in dev cytoscape
This is solely because of warnings present in Java 8; Permanent
generation is no longer present. Now we have...Metadata space.